[package]
name = "mt-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
scroll = "0.12.0"
thiserror = "1.0.61"
