[package]
name = "materialbin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
byteorder = "1.5.0"
indexmap = "2.2.6"

scroll = "0.13.0"


[lib]
crate-type = ["lib", "staticlib"]
bench = false
[features]
default = []
ffi = []
backtracing =[]
